Move cal trigger to button from field and move dialog down to prevent header overlap

--- a/DevTimer/Content/Site.css
+++ b/DevTimer/Content/Site.css
@@ -85,3 +85,7 @@ textarea {
 form > ul.nav.navbar-nav.navbar-right.pull-right {
     margin-right: 15px;
 }
+
+#myModal .modal-dialog {
+    margin-top: 100px;
+}
